--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -130,6 +130,8 @@ dependencies {
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
     compile project(':react-native-vector-icons')
+    compile project(':RNAdMob')
+    compile project(':react-native-spinkit')
 }
 
 // Run this once to be able to run the application with BUCK
