--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "react": "~15.4.1",
     "react-native": " 0.42.3",
+    "react-native-admob": "^1.2.1",
     "react-native-scrollable-tab-view": "^0.7.3",
+    "react-native-spinkit": "^1.0.2",
     "react-native-swiper": "^1.5.4",
     "react-native-tab-navigator": "^0.3.3",
     "react-native-vector-icons": "^4.0.0",
