--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "~15.4.1",
     "react-native": " 0.42.3",
     "react-native-admob": "^1.2.1",
+    "react-native-fs": "^2.1.0-rc.1",
     "react-native-gifted-listview": "0.0.15",
     "react-native-scrollable-tab-view": "^0.6.0",
     "react-native-spinkit": "^1.0.2",
