--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-swiper": "^1.5.4",
     "react-native-tab-navigator": "^0.3.3",
     "react-native-vector-icons": "^4.0.0",
+    "react-native-wechat": "^1.9.2",
     "react-redux": "^5.0.3",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0"
