--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -135,6 +135,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-video')
     compile project(':react-native-wechat')
     compile project(':react-native-fs')
     compile fileTree(dir: "libs", include: ["*.jar"])
