--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "~15.4.1",
     "react-native": " 0.42.3",
     "react-native-admob": "^1.2.1",
+    "react-native-device-info": "^0.10.2",
     "react-native-fs": "^2.1.0-rc.1",
     "react-native-gifted-listview": "0.0.15",
     "react-native-scrollable-tab-view": "^0.6.0",
@@ -17,7 +18,7 @@
     "react-native-swiper": "^1.5.4",
     "react-native-tab-navigator": "^0.3.3",
     "react-native-vector-icons": "^4.0.0",
-    "react-native-video": "^1.0.0",
+    "react-native-video-player": "^0.6.1",
     "react-native-wechat": "^1.9.2",
     "react-redux": "^5.0.3",
     "redux": "^3.6.0",
